--- a/Security/InfoSec.mediawiki
+++ b/Security/InfoSec.mediawiki
@@ -1,6 +1,6 @@
-=Operations Security Team=
+=Enterprise Information Security Team=
 {{TOC right|limit=2}}
-OpSec assists Mozillians in defining and operating security controls to ensure that data at Mozilla is protected consistently across the organization.
+Infosec assists Mozillians in defining and operating security controls to ensure that data at Mozilla is protected consistently across the organization.
 * we help you define the risks around your services and data
 * we help projects design and implement security controls
 * we maintain a risk-based inventory of systems and their functional security controls to help Mozilla management determine where to invest in security measures
@@ -13,7 +13,7 @@ Email us at '''opsec''' [at] mozilla.com. For confidential information, encrypt 
 
 For security incidents, file a bug in Bugzilla under the product/component [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=Investigation] or [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=Incident].
 
-Our IRC channel is #security at [irc://irc.mozilla.org/security irc.mozilla.org].
+Our IRC channel is #foxsignal or #security at [irc://irc.mozilla.org/security irc.mozilla.org].
 
 = Members =
 [[File:OpSec.png|left|200px]]
@@ -42,7 +42,7 @@ The services listed below are available to everyone working on the Mozilla proje
 
 === Description ===
 
-OpSec develops and operates MozDef as a service to assist Mozilla projects in defending their operations. Mozilla systems can send events, logs and other data to MozDef to be automatically correlated and consistently treated.
+InfoSec develops and operates MozDef as a service to assist Mozilla projects in defending their operations. Mozilla systems can send events, logs and other data to MozDef to be automatically correlated and consistently treated.
 
 === What you can do with this service ===
 
@@ -80,12 +80,12 @@ The goal of the NSM project is to provide useful context information for both th
 ; Support commitment
 : business hours availability. 1 year data retention.
 ; Costs
-: platform supported by OpSec. Subscriber’s handles the cost of provisioning and monitoring the agents on target systems.
+: platform supported by InfoSec. Subscriber’s handles the cost of provisioning and monitoring the agents on target systems.
 : [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=MIG&assigned_to=jvehent%40mozilla.com&blocked=896480 request bug]
 
 === Description ===
 [[File:Mig-console.png|right|300px]]
-OpSec operates a client/server platform to facilitate the investigation of large numbers of systems in parallel. We distribute agents across endpoints of an infrastructure that can be queried in real-time through a central console. This service uses Mozilla InvestiGator (MIG).
+InfoSec operates a client/server platform to facilitate the investigation of large numbers of systems in parallel. We distribute agents across endpoints of an infrastructure that can be queried in real-time through a central console. This service uses Mozilla InvestiGator (MIG).
 
 === What you can do with this service ===
 
@@ -94,14 +94,14 @@ OpSec operates a client/server platform to facilitate the investigation of large
 * Read and write host firewall rules.
 * Search through the memory of a live system.
 * Search for MAC addresses, IP addresses and connected IPs.
-* Verify conformity of a configuration with OpSec best practices.
+* Verify conformity of a configuration with InfoSec best practices.
 
 == Service: Test driven systems security ==
 [[File:Compliance Chart 1.png|right|600px]]
 ; Support commitment
 : business hours availability. 1 year data retention.
 ; Costs
-: platform supported by OpSec. Subscriber’s handles the cost of provisioning and monitoring the agents on target systems.
+: platform supported by InfoSec. Subscriber’s handles the cost of provisioning and monitoring the agents on target systems.
 ; Service request
 : [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=MIG&assigned_to=jvehent%40mozilla.com&blocked=896480 request bug]
 
@@ -119,7 +119,7 @@ Test driven systems security uses bateries of tests ran against a system to eval
 ; Support commitment
 : Response within a week.
 ; Costs
-: 30 minutes meeting with OpSec.
+: 30 minutes meeting with InfoSec.
 ; Service request
 : [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=Review request bug]
 
@@ -139,7 +139,7 @@ The Rapid Risk (Impact) Assessment (also called Rapid Risk Analysis) is a 30 min
 ; Support commitment
 : Response within a week.
 ; Costs
-: One or more meeting with OpSec.
+: One or more meeting with InfoSec.
 ; Service request
 : [https://bugzilla.mozilla.org/enter_bug.cgi?product=Enterprise%20Information%20Security&component=Review request bug]
 
@@ -241,7 +241,7 @@ Goals:
 * Facilitate repeatable, predictable processes for incident handling
 * Go beyond traditional SIEM systems in automating incident handling, information sharing, workflow, metrics and response automation
 
-= Documentation maintained by OpSec =
+= Documentation maintained by InfoSec =
 * [https://wiki.mozilla.org/Security/OpSec This page]
 * [https://wiki.mozilla.org/Security/Server_Side_TLS Server Side TLS]
 * [https://wiki.mozilla.org/Security/Guidelines/Key_Management Key Management]
