--- a/Security/Guidelines/Key_Management.mediawiki
+++ b/Security/Guidelines/Key_Management.mediawiki
@@ -9,6 +9,7 @@ The Operations Security (OpSec) team maintains this document as a reference guid
 ! Document Status !! Major Versions
 |- 
 |  <span style="color:orange;">'''DRAFT'''</span> ||
+* Version 1.2: kang: Bump key requirements see also <https://www.nsa.gov/ia/programs/suiteb_cryptography/index.shtml>, rationale: historically when the NSA has such high requirements they're aware of significant weaknesses with lower requirements.
 * Version 1.1: kang: migrated OpenSSH key handling to [[Security/Guidelines/OpenSSH]]
 * Version 1: kang/ulfr: creation
 |}
@@ -36,11 +37,11 @@ This section organizes algorithms and key sizes for a given validity period that
 |-
 | Asymmetric encryption || ECDSA 384 bits || 192 bits
 |-
-| Symmetric encryption || AES-GCM 192 bits || 192 bits
+| Symmetric encryption || AES-GCM 256 bits || 256 bits
 |- 
-| Hash & HMAC || SHA-384 || 192 bits
+| Hash & HMAC || SHA-512 || 256 bits
 |-
-| Hash & HMAC || SHA3-384 || 192 bits
+| Hash & HMAC || SHA3-512 || 256 bits
 |}
 
 == 2 years (default) ==
@@ -48,19 +49,20 @@ This section organizes algorithms and key sizes for a given validity period that
 |-
 ! Type !! Algorithm and key size !! Bits of security
 |-
-| Asymmetric keys || RSA 2048 bits || 112 bits
+| Asymmetric keys || RSA 3072 bits || 128 bits
 |-
-| Asymmetric keys || ECDSA 224 or 256 bits || 112 bits
+| Asymmetric keys || ECDSA 384 bits || 192 bits
 |-
-| Symmetric encryption || AES-CBC 128 bits || 128 bits
+| Symmetric encryption || AES-CBC 256 bits || 256 bits
 |-
-| Hash & HMAC || SHA-256 || 128 bits
+| Hash & HMAC || SHA-384 || 192 bits
 |-
-| Hash & HMAC || SHA3-256 || 128 bits
+| Hash & HMAC || SHA3-384 || 192 bits
 |}
 
 == Legacy, not recommended ==
-The following algorithms and sizes are still widely used but do not provide sufficient security for modern services and should be deprecated as soon as possible, unless backward compatibility is a strong requirement (even so, a deprecation planning should be setup).
+The following algorithms and sizes are still widely used but do not provide sufficient security for modern services and should be deprecated as soon as possible.
+
 {| class="wikitable"
 |-
 ! Type !! Algorithm and key size !! Bits of security
@@ -71,7 +73,7 @@ The following algorithms and sizes are still widely used but do not provide suff
 |-
 | Symmetric encryption || 3DES || 112 bits
 |-
-| Symmetric encryption || RC4 || 
+| Symmetric encryption || RC4 ||
 |-
 | Hash & HMAC || SHA-1 || 80 bits
 |-
@@ -118,14 +120,16 @@ Using long key ids over the default short key ids is also recommended. If possib
 
 File: ~/.gnupg/gpg.conf
 <source>
-personal-digest-preferences SHA512 SHA384 SHA256
+personal-digest-preferences SHA512 SHA384
 cert-digest-algo SHA256
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+default-preference-list SHA512 SHA384 AES256 ZLIB BZIP2 ZIP Uncompressed
 keyid-format 0xlong
 </source>
 
 = Definitions =
 == Bits of security ==
 Security Bits estimate the computational steps or operations (not machine instructions) required to solve a cryptographic problem (i.e. crack the key/hash).
+Of course, these do not factor in weaknesses in the algorithms which would reduce the effective amount of security bits
+and therefore is only used as an indicator of the width of the total (maximum) space to exhaust to ensuring finding the key.
 
-For a more detailed definition, see http://en.wikipedia.org/wiki/Key_size and  http://www.cryptopp.com/wiki/Security_Level#Security_Bits.
+For a more detailed definition, see http://en.wikipedia.org/wiki/Key_size, https://en.wikipedia.org/wiki/Secure_Hash_Algorithm and  http://www.cryptopp.com/wiki/Security_Level#Security_Bits.
