--- a/Security/Fundamentals.mediawiki
+++ b/Security/Fundamentals.mediawiki
@@ -18,7 +18,7 @@ Changes are detailed in the [https://github.com/mozilla/wikimo_opsec/commits/mas
 !Rationale
 |-
 |<div id="shared-passwords">[[#shared-passwords|§]] Shared passwords and accounts</div>
-|Shared passwords are passwords or/and accounts that more than one person knows or has access to. They're discouraged because
+|Shared passwords are passwords or/and accounts that more than one person knows or has access to. They're discouraged because:
 * Use of them makes auditing access difficult:
 ** multiple users appear in audit logs as one user and different users actions are difficult to differentiate.
 ** the number of audit logs that need to be searched increases.
@@ -27,8 +27,7 @@ single shared account across multiple systems at the same time.
 * Revoking access to a subset of the users of a shared password requires a password change that affects all users.
 |-
 |<div id="decentralized-user-account-management">[[#decentralized-user-account-management|§]] Decentralized user account management</div>
-|Decentralized user account management refers to user account management which is not driven by the source of truth for
-the user's account. Examples of this are:
+|Decentralized user account management refers to user account management which is not driven by the source of truth for the user's account. Examples of this are:
 * Manual user account creation by administrators.
 * Automated user account creation from scripting or configuration management that creates accounts based on a static
 * list of users.
@@ -41,8 +40,7 @@ This practice is discouraged because:
 * management, that change is not propagated to the centralized account management system.
 |-
 |<div id="mfa">[[#mfa|§]] Multi-factor Authentication</div>
-|Multi-factor authentication (MFA) is a security system that requires more than one method of authentication from
-independent categories of credentials to verify the user's identity for a login or other transaction.
+|Multi-factor authentication (MFA) is a security system that requires more than one method of authentication from independent categories of credentials to verify the user's identity for a login or other transaction.
 Requiring the use of MFA for internet accessible endpoints is encouraged because by requiring not only something the
 user knows (a knowledge factor like a memorized password) but also something that the user has (a possession factor like
 a smartcard, yubikey or mobile phone) the field of threat actors that could compromise the account is reduced to actors
@@ -56,8 +54,7 @@ password '''and''' compromise your mobile phone. This is, however, still possibl
 In particular, storing both first on second factor on the same device (for example: mobile phone) is strongly discouraged.
 |-
 |<div id="nsm">[[#nsm|§]] Network Security Monitoring</div>
-|Network Security Monitoring (NSM) is the practice of monitoring raw network traffic in order to detect intrusions or
-abnormal behavior. The use of NSM is encouraged because it can:
+|Network Security Monitoring (NSM) is the practice of monitoring raw network traffic in order to detect intrusions or abnormal behavior. The use of NSM is encouraged because it can:
 * identify when a host has been compromised by the network traffic it emits.
 * understand the commonalities in a distributed network attack.
 * provide incident responders with data needed to quickly diagnose security issues.
